Final_Folder/baocao_2/Source_code/SimpleCodeParser.py
# Generated from SimpleCode.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class SimpleCodeParser ( Parser ):

    grammarFileName = "SimpleCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "','", "';'", "'['", "']'", 
                     "'('", "')'", "'='", "'+='", "'-='", "'-'", "'!'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "' '", "'\t'", "'class'", 
                     "'Program'", "'void'", "'if'", "'else'", "'for'", "'break'", 
                     "'continue'", "'return'", "'callout'", "'int'", "'boolean'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "DATA_TYPE", "BINARY_OP", 
                      "ARITH_OP", "REL_OP", "EQ_OP", "COND_OP", "SPACE", 
                      "TAB", "CLASS", "PROGRAM", "VOID", "IF", "ELSE", "FOR", 
                      "BREAK", "CONTINUE", "RETURN", "CALLOUT", "INT", "BOOLEAN", 
                      "BOOLEANLITERAL", "IDENTIFIER", "INTLITERAL", "DECIMALLITERAL", 
                      "HEXLITERAL", "CHAR", "CHARLITERAL", "STRINGLITERAL", 
                      "DIGIT", "ALPHA", "HEX_DIGIT", "White", "Newline", 
                      "LineComment", "BlockComment", "ERROR" ]

    RULE_program = 0
    RULE_field_decl = 1
    RULE_variable = 2
    RULE_array_decl = 3
    RULE_method_decl = 4
    RULE_method_decl_type = 5
    RULE_method_params = 6
    RULE_block = 7
    RULE_statement = 8
    RULE_assign_statement = 9
    RULE_assign_op = 10
    RULE_method_call = 11
    RULE_method_call_params = 12
    RULE_method_name = 13
    RULE_location = 14
    RULE_expr = 15
    RULE_callout_arg = 16
    RULE_literal = 17

    ruleNames =  [ "program", "field_decl", "variable", "array_decl", "method_decl", 
                   "method_decl_type", "method_params", "block", "statement", 
                   "assign_statement", "assign_op", "method_call", "method_call_params", 
                   "method_name", "location", "expr", "callout_arg", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    DATA_TYPE=14
    BINARY_OP=15
    ARITH_OP=16
    REL_OP=17
    EQ_OP=18
    COND_OP=19
    SPACE=20
    TAB=21
    CLASS=22
    PROGRAM=23
    VOID=24
    IF=25
    ELSE=26
    FOR=27
    BREAK=28
    CONTINUE=29
    RETURN=30
    CALLOUT=31
    INT=32
    BOOLEAN=33
    BOOLEANLITERAL=34
    IDENTIFIER=35
    INTLITERAL=36
    DECIMALLITERAL=37
    HEXLITERAL=38
    CHAR=39
    CHARLITERAL=40
    STRINGLITERAL=41
    DIGIT=42
    ALPHA=43
    HEX_DIGIT=44
    White=45
    Newline=46
    LineComment=47
    BlockComment=48
    ERROR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(SimpleCodeParser.CLASS, 0)

        def PROGRAM(self):
            return self.getToken(SimpleCodeParser.PROGRAM, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCodeParser.SPACE)
            else:
                return self.getToken(SimpleCodeParser.SPACE, i)

        def field_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCodeParser.Field_declContext)
            else:
                return self.getTypedRuleContext(SimpleCodeParser.Field_declContext,i)


        def method_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCodeParser.Method_declContext)
            else:
                return self.getTypedRuleContext(SimpleCodeParser.Method_declContext,i)


        def getRuleIndex(self):
            return SimpleCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SimpleCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(SimpleCodeParser.CLASS)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 37
                self.match(SimpleCodeParser.SPACE)
                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SimpleCodeParser.SPACE):
                    break

            self.state = 42
            self.match(SimpleCodeParser.PROGRAM)
            self.state = 44 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 43
                self.match(SimpleCodeParser.SPACE)
                self.state = 46 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SimpleCodeParser.SPACE):
                    break

            self.state = 48
            self.match(SimpleCodeParser.T__0)
            self.state = 52
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 49
                    self.match(SimpleCodeParser.SPACE) 
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 58
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 55
                    self.field_decl() 
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleCodeParser.DATA_TYPE or _la==SimpleCodeParser.VOID:
                self.state = 61
                self.method_decl()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleCodeParser.SPACE:
                self.state = 67
                self.match(SimpleCodeParser.SPACE)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(SimpleCodeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA_TYPE(self):
            return self.getToken(SimpleCodeParser.DATA_TYPE, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCodeParser.VariableContext)
            else:
                return self.getTypedRuleContext(SimpleCodeParser.VariableContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCodeParser.SPACE)
            else:
                return self.getToken(SimpleCodeParser.SPACE, i)

        def getRuleIndex(self):
            return SimpleCodeParser.RULE_field_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_decl" ):
                listener.enterField_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_decl" ):
                listener.exitField_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_decl" ):
                return visitor.visitField_decl(self)
            else:
                return visitor.visitChildren(self)




    def field_decl(self):

        localctx = SimpleCodeParser.Field_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_field_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(SimpleCodeParser.DATA_TYPE)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.match(SimpleCodeParser.SPACE)
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SimpleCodeParser.SPACE):
                    break

            self.state = 81
            self.variable()
            self.state = 86
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 82
                    self.match(SimpleCodeParser.T__2)
                    self.state = 83
                    self.variable() 
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 89
            self.match(SimpleCodeParser.T__3)
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 90
                    self.match(SimpleCodeParser.SPACE) 
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_decl(self):
            return self.getTypedRuleContext(SimpleCodeParser.Array_declContext,0)


        def IDENTIFIER(self):
            return self.getToken(SimpleCodeParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SimpleCodeParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = SimpleCodeParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.array_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(SimpleCodeParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SimpleCodeParser.IDENTIFIER, 0)

        def INTLITERAL(self):
            return self.getToken(SimpleCodeParser.INTLITERAL, 0)

        def getRuleIndex(self):
            return SimpleCodeParser.RULE_array_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_decl" ):
                listener.enterArray_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_decl" ):
                listener.exitArray_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_decl" ):
                return visitor.visitArray_decl(self)
            else:
                return visitor.visitChildren(self)




    def array_decl(self):

        localctx = SimpleCodeParser.Array_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(SimpleCodeParser.IDENTIFIER)
            self.state = 101
            self.match(SimpleCodeParser.T__4)
            self.state = 102
            self.match(SimpleCodeParser.INTLITERAL)
            self.state = 103
            self.match(SimpleCodeParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_decl_type(self):
            return self.getTypedRuleContext(SimpleCodeParser.Method_decl_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(SimpleCodeParser.IDENTIFIER, 0)

        def block(self):
            return self.getTypedRuleContext(SimpleCodeParser.BlockContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCodeParser.SPACE)
            else:
                return self.getToken(SimpleCodeParser.SPACE, i)

        def method_params(self):
            return self.getTypedRuleContext(SimpleCodeParser.Method_paramsContext,0)


        def getRuleIndex(self):
            return SimpleCodeParser.RULE_method_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_decl" ):
                listener.enterMethod_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_decl" ):
                listener.exitMethod_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_decl" ):
                return visitor.visitMethod_decl(self)
            else:
                return visitor.visitChildren(self)




    def method_decl(self):

        localctx = SimpleCodeParser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.method_decl_type()
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.match(SimpleCodeParser.SPACE)
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SimpleCodeParser.SPACE):
                    break

            self.state = 111
            self.match(SimpleCodeParser.IDENTIFIER)
            self.state = 112
            self.match(SimpleCodeParser.T__6)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleCodeParser.DATA_TYPE:
                self.state = 113
                self.method_params()


            self.state = 116
            self.match(SimpleCodeParser.T__7)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleCodeParser.SPACE:
                self.state = 117
                self.match(SimpleCodeParser.SPACE)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_decl_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(SimpleCodeParser.VOID, 0)

        def DATA_TYPE(self):
            return self.getToken(SimpleCodeParser.DATA_TYPE, 0)

        def getRuleIndex(self):
            return SimpleCodeParser.RULE_method_decl_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_decl_type" ):
                listener.enterMethod_decl_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_decl_type" ):
                listener.exitMethod_decl_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_decl_type" ):
                return visitor.visitMethod_decl_type(self)
            else:
                return visitor.visitChildren(self)




    def method_decl_type(self):

        localctx = SimpleCodeParser.Method_decl_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_method_decl_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not(_la==SimpleCodeParser.DATA_TYPE or _la==SimpleCodeParser.VOID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_paramsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCodeParser.DATA_TYPE)
            else:
                return self.getToken(SimpleCodeParser.DATA_TYPE, i)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCodeParser.IDENTIFIER)
            else:
                return self.getToken(SimpleCodeParser.IDENTIFIER, i)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCodeParser.SPACE)
            else:
                return self.getToken(SimpleCodeParser.SPACE, i)

        def getRuleIndex(self):
            return SimpleCodeParser.RULE_method_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_params" ):
                listener.enterMethod_params(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_params" ):
                listener.exitMethod_params(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_params" ):
                return visitor.visitMethod_params(self)
            else:
                return visitor.visitChildren(self)




    def method_params(self):

        localctx = SimpleCodeParser.Method_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_method_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(SimpleCodeParser.DATA_TYPE)
            self.state = 129 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 128
                self.match(SimpleCodeParser.SPACE)
                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SimpleCodeParser.SPACE):
                    break

            self.state = 133
            self.match(SimpleCodeParser.IDENTIFIER)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleCodeParser.T__2:
                self.state = 134
                self.match(SimpleCodeParser.T__2)
                self.state = 135
                self.match(SimpleCodeParser.DATA_TYPE)
                self.state = 136
                self.match(SimpleCodeParser.SPACE)
                self.state = 137
                self.match(SimpleCodeParser.IDENTIFIER)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCodeParser.Field_declContext)
            else:
                return self.getTypedRuleContext(SimpleCodeParser.Field_declContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(SimpleCodeParser.StatementContext,i)


        def getRuleIndex(self):
            return SimpleCodeParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SimpleCodeParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(SimpleCodeParser.T__0)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleCodeParser.T__0) | (1 << SimpleCodeParser.DATA_TYPE) | (1 << SimpleCodeParser.IF) | (1 << SimpleCodeParser.FOR) | (1 << SimpleCodeParser.BREAK) | (1 << SimpleCodeParser.CONTINUE) | (1 << SimpleCodeParser.RETURN) | (1 << SimpleCodeParser.CALLOUT) | (1 << SimpleCodeParser.IDENTIFIER))) != 0):
                self.state = 146
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SimpleCodeParser.DATA_TYPE]:
                    self.state = 144
                    self.field_decl()
                    pass
                elif token in [SimpleCodeParser.T__0, SimpleCodeParser.IF, SimpleCodeParser.FOR, SimpleCodeParser.BREAK, SimpleCodeParser.CONTINUE, SimpleCodeParser.RETURN, SimpleCodeParser.CALLOUT, SimpleCodeParser.IDENTIFIER]:
                    self.state = 145
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(SimpleCodeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_statement(self):
            return self.getTypedRuleContext(SimpleCodeParser.Assign_statementContext,0)


        def method_call(self):
            return self.getTypedRuleContext(SimpleCodeParser.Method_callContext,0)


        def IF(self):
            return self.getToken(SimpleCodeParser.IF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCodeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimpleCodeParser.ExprContext,i)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCodeParser.BlockContext)
            else:
                return self.getTypedRuleContext(SimpleCodeParser.BlockContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCodeParser.SPACE)
            else:
                return self.getToken(SimpleCodeParser.SPACE, i)

        def ELSE(self):
            return self.getToken(SimpleCodeParser.ELSE, 0)

        def FOR(self):
            return self.getToken(SimpleCodeParser.FOR, 0)

        def IDENTIFIER(self):
            return self.getToken(SimpleCodeParser.IDENTIFIER, 0)

        def RETURN(self):
            return self.getToken(SimpleCodeParser.RETURN, 0)

        def BREAK(self):
            return self.getToken(SimpleCodeParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(SimpleCodeParser.CONTINUE, 0)

        def getRuleIndex(self):
            return SimpleCodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SimpleCodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 254
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,31,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.assign_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.method_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 155
                self.match(SimpleCodeParser.IF)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SimpleCodeParser.SPACE:
                    self.state = 156
                    self.match(SimpleCodeParser.SPACE)
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 162
                self.match(SimpleCodeParser.T__6)
                self.state = 163
                self.expr(0)
                self.state = 164
                self.match(SimpleCodeParser.T__7)
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SimpleCodeParser.SPACE:
                    self.state = 165
                    self.match(SimpleCodeParser.SPACE)
                    self.state = 170
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 171
                self.block()
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SimpleCodeParser.ELSE:
                    self.state = 172
                    self.match(SimpleCodeParser.ELSE)
                    self.state = 176
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==SimpleCodeParser.SPACE:
                        self.state = 173
                        self.match(SimpleCodeParser.SPACE)
                        self.state = 178
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 179
                    self.block()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 182
                self.match(SimpleCodeParser.FOR)
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SimpleCodeParser.SPACE:
                    self.state = 183
                    self.match(SimpleCodeParser.SPACE)
                    self.state = 188
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 189
                self.match(SimpleCodeParser.IDENTIFIER)
                self.state = 193
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SimpleCodeParser.SPACE:
                    self.state = 190
                    self.match(SimpleCodeParser.SPACE)
                    self.state = 195
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 196
                self.match(SimpleCodeParser.T__8)
                self.state = 200
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SimpleCodeParser.SPACE:
                    self.state = 197
                    self.match(SimpleCodeParser.SPACE)
                    self.state = 202
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 203
                self.expr(0)
                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SimpleCodeParser.SPACE:
                    self.state = 204
                    self.match(SimpleCodeParser.SPACE)
                    self.state = 209
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 210
                self.match(SimpleCodeParser.T__2)
                self.state = 214
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SimpleCodeParser.SPACE:
                    self.state = 211
                    self.match(SimpleCodeParser.SPACE)
                    self.state = 216
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
